--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-push-0 col-md-5">
-            <img src="img/Winter Times Picture.jpg" alt="Picture of Dibya Prokash Sarkar" />
+            <img src="img/dibya2.jpg" alt="Picture of Dibya Prokash Sarkar" />
           </div>
         </div>
       </div>
