--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     <!-- main css, import other css -->
     <link rel="stylesheet" href="css/main.css">
 
-    <!-- font awesome -->
-    <link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.css" />
+    <!-- font awesome
+    <link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.css" />-->
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
 
     <!-- modernizr js -->
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-
   </head>
 
   <body>
@@ -110,7 +112,8 @@
                 </p>
                 <div class="slider-button smooth-scroll mt-40">
                   <a class="btn lg-btn" href="#about" target="_blank">About Me</a>
-                  <a class="btn" href="mailto:dibyaprokash@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
+                  <a class="btn" href="https://www.researchgate.net/profile/Dibya_Prokash_Sarkar" target="_blank" style="font-size: 25px"><i class="fab fa-researchgate"></i></a>
+                  <a class="btn" href="mailto:dibyaprokash@gmail.com" target="_blank"><i class="fa fa-envelope" style="font-size: 20px"></i></a>
                 </div>
               </div>
             </div>
