--- a/publications.html
+++ b/publications.html
@@ -131,7 +131,7 @@
                             <li>
                               <h3 class="montserrat weight-medium mb-5 capitalize"> <i class="zmdi zmdi-label-alt"></i> A Low-cost Healthcare Bot for Elderly People (Accepted)</h3>
                               <p class="font-16 line-height-28">
-                                  <strong><u>Sarkar, D. P.</u></strong> , Farden, M. F., Islam, M. A., Rony, R. J., & Motahar, T. (2019, May).
+                                  <strong><u>Sarkar, D. P.</u></strong> , Farden, M. F., Islam, M. A., Rony, R. J., & Motahar, T. (2019, May). Joint 2019 8th International Conference on Informatics, Electronics & Vision (ICIEV) & 3rd International Conference on Imaging, Vision & Pattern Recognition (IVPR), USA.
                               </p>
                             </li>
                             <br>
