--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                           <ul class="clearfix">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="index.html">About</a></li>
-                            <li><a href="project.html">Portfolio</a></li>
+                            <li><a href="project.html">Projects</a></li>
                             <li><a href="publications.html">Publications</a></li>
                             <li><a href="#contact">Contact</a></li>
                           </ul>
@@ -90,7 +90,7 @@
                   <ul class="clearfix">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#portfolio">Projects</a></li>
                     <li><a href="#publication">Publications</a></li>              
                     <li><a href="#contact">Contact</a></li>
                   </ul>
