--- a/project.html
+++ b/project.html
@@ -69,7 +69,7 @@
                     <ul class="clearfix">
                       <li><a href="index.html">Home</a></li>
                       <li><a href="index.html">About</a></li>
-                      <li><a href="#portfolio">Portfolio</a></li>
+                      <li><a href="#portfolio">Projects</a></li>
                       <li><a href="publications.html">Publications</a></li>
                       <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -90,7 +90,7 @@
             <ul class="clearfix">
               <li><a href="index.html">Home</a></li>
               <li><a href="index.html">About</a></li>
-              <li><a href="#portfolio">Portfolio</a></li>
+              <li><a href="#portfolio">Projects</a></li>
               <li><a href="publications.html">Publications</a></li>              
               <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -105,7 +105,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-title text-center mb-30">
-            <h2 class="mb-20">Portfolio</h2>
+            <h2 class="mb-20">Projects</h2>
             <div class="horizontal-line">
               <div class="top"></div>
               <div class="bottom"></div>
