--- a/publications.html
+++ b/publications.html
@@ -59,7 +59,7 @@
                   <ul class="clearfix">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html">About</a></li>
-                    <li><a href="project.html">Portfolio</a></li>
+                    <li><a href="project.html">Projects</a></li>
                     <li><a href="#publication">Publications</a></li>
                     <li><a href="contact.html">Contact</a></li>
                   </ul>
@@ -80,7 +80,7 @@
           <ul class="clearfix">
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html">About</a></li>
-            <li><a href="project.html">Portfolio</a></li>
+            <li><a href="project.html">Projects</a></li>
             <li><a href="#publication">Publications</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
