--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
     <!-- modernizr js -->
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+
+    <meta name="referrer" content="origin">
   </head>
 
   <body>
