--- a/contact.html
+++ b/contact.html
@@ -90,10 +90,10 @@
                 </div>
                 <nav class="mainmenu-box onepage-nev">
                   <ul class="clearfix">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#portfolio">Projects</a></li>
-                    <li><a href="#publication">Publications</a></li>              
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="project.html">Projects</a></li>
+                    <li><a href="publications.html">Publications</a></li>              
                     <li><a href="#contact">Contact</a></li>
                   </ul>
                 </nav>
