--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="left">
               <div class="single-experi mb-50">
                 <div class="left-text floatleft relative">
-                  <a href="https://www.brainstation-23.com/" target="_blank"><h4 class="montserrat weight-medium mb-5 capitalize">Brain Station-23</h4></a>
+                  <a href="https://www.linkedin.com/company/finova-technologies/about/" target="_blank"><h4 class="montserrat weight-medium mb-5 capitalize">Finova Technologies</h4></a>
                   <p class="montserrat weight-medium">2019.4 - On going</p>
                   <p class="montserrat weight-medium">Dhaka, Bangladesh</p>
                 </div>
