--- a/index.html
+++ b/index.html
@@ -138,11 +138,12 @@
                 <h5 class="mb-11">Hello, my name is</h5>
                 <h1 class="mb-30" style="font-size:40px;">Dibya Prokash Sarkar</h1>
                 <p class="font-16 line-height-28" style="text-align:justify;">
-                    I am an HCI & HRI researcher from NSU HCI Research Group. My dissertation work focuses on design and implementation of healthcare robots.
+                    I am an Human Computer Interaction & Data Science Enthusiast.
                 </p>
                 <div class="slider-button smooth-scroll mt-40">
                   <a class="btn lg-btn" href="#about" target="_blank">About Me</a>
                   <a class="btn" href="https://www.researchgate.net/profile/Dibya_Prokash_Sarkar" target="_blank" style="font-size: 25px"><i class="fab fa-researchgate"></i></a>
+                  <a class="btn" href="https://scholar.google.com/citations?user=AkQr_P0AAAAJ&hl=en" target="_blank" style="font-size: 25px"><i class="fa fa-graduation-cap"></i></a>
                   <a class="btn" href="mailto:dibyaprokash@gmail.com" target="_blank"><i class="fa fa-envelope" style="font-size: 20px"></i></a>
                 </div>
               </div>
@@ -189,28 +190,24 @@
             <div class="left mr-40">
               <h3 class="font-22 capitalize">Hi there!</h3>
               <p class="font-16 line-height-28" style="text-align: justify;">
-                I have recently completed my undergrad from North South University in Dhaka, Bangladesh. I'm passionate about robotics, Internet of Things, web development, and hardware implementations. I've created many projects that focus on solving real-life issues with combinations of hardware and software.
+                I have graduated from North South University back in December 2018. During my undergraduate, I published few conference papers in the fields of Human-Computer Interaction, Human-Robot Interaction and Ubiquitous Computing. My future goal is to become a teacher at the university level. As a result, I am keen to pursue my higher studies in the field of Interactive Systems. 
               </p>
               <br>
 
               <p class="font-16 line-height-28" style="text-align: justify;">
-                Previously I did my internship as a Junior Researcher in Bangladesh Jute Research Institute (BJRI). Besides that, I was affiliated with my varisty's HCI Research Group under supervision of Dr. Nova Ahmed and Ms. Tamanna Motahar.
+                My multidisciplinary research interests are on Ubiquitous Computing, Human-Computer Interaction (HCI), Data Science, Internet of Things (IoT), and Computer Vision.
               </p>
               <br>
 
               <p class="font-16 line-height-28" style="text-align: justify;">
-                My multidisciplinary research interests are on Ubiquitous Computing, Human-Computer Interaction (HCI), Human-Robot Interaction (HRI), Internet of Things (IoT), and Computer Vision.
+                Apart from my academic career, I love traveling in my leisure time. Curiosity to know about new things led me to explore different parts of my beautiful country Bangladesh. 
+                <!-- You will come to know about my travel stories from my personal blog section. -->
               </p>
               <br>
 
               <p class="font-16 line-height-28" style="text-align: justify;">
-                Apart from my academic career, I love traveling in my leisure time. Curiosity to know about new things led me to explore different parts of my beautiful country Bangladesh. You will come to know about my travel stories from my personal blog section.
-              </p>
-              <br>
-
-              <p class="font-16 line-height-28" style="text-align: justify;">
-                <!-- <strong>Please feel free to reach out. I am open to any collaboration and opportunities in technology and research.</strong> -->
-                <strong>I am currently looking for research opportunities for higher studies. If you are interested, please feel free to reach out. I am open to any collaboration and opportunities in technology and research.</strong>
+                <!-- <strong>Please feel free to reach out. I am open to any collaboration and opportunities in technology and research.If you are interested, please feel free to reach out. I am open to any collaboration and opportunities in technology and research.</strong> -->
+                <strong>I am going to pursue my MSc from January 2021 under the supervision of Dr. Sowmya Somanath and Dr. Charles Perin at University of Victoria, British Columbia, Canada. I will be joining the VIXI and CALEB Labs of UVic. Thanks!</strong>
               </p>
               <div class="about-button mt-30">
                 <a class="btn" href="#" target="_blank"> <i class="fa fa-download" style="padding-right: 12px;"></i>Download my resume</a>
@@ -244,20 +241,43 @@
             <div class="left">
               <div class="single-experi mb-50">
                 <div class="left-text floatleft relative">
-                  <a href="https://www.linkedin.com/company/finova-technologies/about/" target="_blank"><h4 class="montserrat weight-medium mb-5 capitalize">Finova Technologies</h4></a>
-                  <p class="montserrat weight-medium">2019.4 - On going</p>
+                  <a href="https://disseminare.com/" target="_blank"><h4 class="montserrat weight-medium mb-5 capitalize">Disseminare Consulting Pvt. (BD) Limited</h4></a>
+                  <p class="montserrat weight-medium">2019.06 - 2020.08</p>
+                  <p class="montserrat weight-medium">Dhaka, Bangladesh</p>
+                </div>
+                <div class="right-text">
+                  <i class="zmdi zmdi-star"></i>
+                  <h3 class="capitalize font-20">Software Development Engineer</h3>
+                  <p>
+                    Worked as a part of R&D Team where designed, formulated and developed dynamic financial data analytical web tool and API using LR and SVM algorithm to predict the risk categorization. Also, integrated payment gateway (i.e. PayU, Razorpay) and Learning Management System (i.e. TalentLMS) in company's websites.
+                  </p>
+                  <ul class="awards">
+                    <li>Technologies: </li>
+                  </ul>
+                  <p>PHP, HTML, CSS, JavaScript, Solidity</p>
+                </div>
+              </div>
+
+              <div class="single-experi mb-50">
+                <div class="left-text floatleft relative">
+                  <a href="https://www.linkedin.com/company/finova-technologies/about/" target="_blank"><h4 class="montserrat weight-medium mb-5 capitalize">Finova Technologies Limited</h4></a>
+                  <p class="montserrat weight-medium">2019.04 - 2019.07</p>
                   <p class="montserrat weight-medium">Dhaka, Bangladesh</p>
                 </div>
                 <div class="right-text">
                   <i class="zmdi zmdi-star"></i>
                   <h3 class="capitalize font-20">Web Developer</h3>
                   <p>
-                    Design & implementation of web application especially Front-end using HTML5, CSS3, Node JS, Laravel and PHP. Recently joined in this company. 
+                    Worked as a part of the Web Development Team for a few months, especially worked for their Dorpon website, an E-commerce website in Bangladesh. 
                   </p>
+                  <ul class="awards">
+                    <li>Technologies: </li>
+                  </ul>
+                  <p>HTML, CSS, Node JS, Laravel and PHP</p>
                 </div>
               </div>
 
-              <div class="single-experi mb-50">
+              <!-- <div class="single-experi mb-50">
                 <div class="left-text floatleft relative">
                   <a href="https://nsuhciresearch.wordpress.com/" target="_blank"><h4 class="montserrat weight-medium mb-5 capitalize">North South University HCI Research Group</h4></a>
                   <p class="montserrat weight-medium">2018.5 - 2018.12</p>
@@ -270,22 +290,22 @@
                     Conducted software architecture research and development, rapid prototyping, and user experience testing for <a class="experience-link" href="https://www.researchgate.net/project/I-Am-Here" target="_blank">I Am Here</a>, developed for preserving physical security and safety. This project was supervised by <a class="experience-link" href="https://www.researchgate.net/profile/Nova_Ahmed" target="_blank">Dr. Nova Ahmed</a>, Associate Professor, North South University.
                   </p>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="col-xs-12 col-sm-6">
             <div class="right">
               <div class="single-experi">
                 <div class="left-text floatleft">
-                  <a href="http://www.bjri.gov.bd/" target="_blank"><h4 class="montserrat weight-medium mb-5 capitalize">Bangladesh Jute Research Institute</h4></a>
-                  <p class="montserrat weight-medium">2018.3 - 2018.11</p>
+                  <a href="http://www.bjri.gov.bd/" target="_blank"><h4 class="montserrat weight-medium mb-5 capitalize">North South University HCI Research Group</h4></a>
+                  <p class="montserrat weight-medium">2018.05 - 2018.12</p>
                   <p class="montserrat weight-medium">Dhaka, Bangladesh</p>
                 </div>
                 <div class="right-text">
                   <i class="zmdi zmdi-star"></i>
-                  <h3 class="capitalize font-20">Junior Researcher (Intern)</h3>
+                  <h3 class="capitalize font-20">Research Assistant</h3>
                   <p>
-                    Worked here in their Internship program. Analyzing genomic data of Tossa Pat-8 using SPSS tool.
+                    Conducted software architecture research and development, rapid prototyping, and user experience testing for <a class="experience-link" href="https://www.researchgate.net/project/I-Am-Here" target="_blank">I Am Here</a>, developed for preserving physical security and safety. This project was supervised by <a class="experience-link" href="https://www.researchgate.net/profile/Nova_Ahmed" target="_blank">Dr. Nova Ahmed</a>, Associate Professor, North South University.
                   </p>
                 </div>
                 <br />
@@ -325,14 +345,14 @@
               <div class="single-experi mb-50">
                 <div class="left-text floatleft relative">
                   <a href="http://www.northsouth.edu/" target="_blank"><h4 class="montserrat weight-medium mb-5 capitalize">North South University</h4></a>
-                  <p class="montserrat weight-medium">2014.9 - 2018.12</p>
+                  <p class="montserrat weight-medium">2014.09 - 2018.12</p>
                   <p class="montserrat weight-medium">Dhaka, Bangladesh</p>
                 </div>
                 <div class="right-text">
                   <i class="zmdi zmdi-label-alt"></i>
                   <h3 class="capitalize font-20">BSc in Computer Science & Engineering</h3>
                   <ul class="awards">
-                    <li>Major: Computer Science</li>
+                    <li>Major: Computer Science & Engineering</li>
                     <li>Advisor: <a href="https://www.researchgate.net/profile/Nova_Ahmed" target="_blank"><strong>Dr Nova Ahmed</strong></a></li>
                     <li>Extra Curricular Activities: </li>
                   </ul>
@@ -341,7 +361,7 @@
                 <br>
                 <div class="left-text floatleft relative">
                   <a href="http://www.notredamecollege-dhaka.com/" target="_blank"><h4 class="montserrat weight-medium mb-5 capitalize">Notre Dame College</h4></a>
-                  <p class="montserrat weight-medium">2012.7 - 2014.7</p>
+                  <p class="montserrat weight-medium">2012.07 - 2014.07</p>
                   <p class="montserrat weight-medium">Dhaka, Bangladesh</p>
                 </div>
                 <div class="right-text">
@@ -361,7 +381,7 @@
               <div class="single-experi mb-50">
                 <div class="left-text floatleft relative">
                   <a href="https://www.sjs.edu.bd/home.php?category=Home" target="_blank"><h4 class="montserrat weight-medium mb-5 capitalize">St. Joseph Higher Secondary School</h4></a>
-                  <p class="montserrat weight-medium">2004.1 - 2012.4</p>
+                  <p class="montserrat weight-medium">2004.01 - 2012.04</p>
                   <p class="montserrat weight-medium">Dhaka, Bangladesh</p>
                 </div>
                 <div class="right-text">
@@ -444,7 +464,7 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="left floatleft">
-              <p>Copyright &copy; 2019 Dibya Prokash Sarkar.</p>
+              <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Dibya Prokash Sarkar. All Rights Reserved.</p>
             </div>
             <div class="right social-link floatright">
               Made by Dibya Prokash Sarkar, on <a href="https://github.com/DibyaProkash/dibyaprokash.github.io" target="_blank" style="color: #393939"><i class="fa fa-github"></i></a> with <i class="fa fa-code"></i>
