--- a/project.html
+++ b/project.html
@@ -163,7 +163,7 @@
 
 
             <div class="grid-item new research robotics percent-33">
-              <a href="#" target="_blank" class="fancybox">
+              <a href="https://www.researchgate.net/publication/338586944_SHEBA_A_Low-Cost_Assistive_Robot_for_Older_Adults_in_the_Developing_World" target="_blank" class="fancybox">
                 <div class="single-portfolio overlay light-1 text-center">
                   <img src="img/proj/sheba_prototype.jpg" alt="SHEBA Robot" />
                   <div class="title plr-40 text-center">
@@ -230,7 +230,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="left floatleft">
-            <p>Copyright &copy; 2019 Dibya Prokash Sarkar.</p>
+            <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Dibya Prokash Sarkar. All Rights Reserved.</p>
           </div>
           <div class="right social-link floatright">
             Made by Dibya Prokash Sarkar, on <a href="https://github.com/DibyaProkash/dibyaprokash.github.io" target="_blank" style="color: #393939"><i class="fa fa-github"></i></a> with <i class="fa fa-code"></i>
