--- a/publications.html
+++ b/publications.html
@@ -150,14 +150,22 @@
                       </ul>
 
                       <ul class="font-22 capitalize" style="text-align: justify;">
-                          <li>
-                            <h3>2019</h3>
-                          </li>
-                        </ul>
+                        <li>
+                          <h3>2019</h3>
+                        </li>
+                      </ul>
 
                         <ul class="font-22 capitalize" style="text-align: justify;">
-                            <li>
-                              <h3 class="montserrat weight-medium mb-5 capitalize"> <i class="zmdi zmdi-label-alt"></i> A Low-cost Healthcare Bot for Elderly People (Accepted)</h3>
+                          <li>
+                            <h3 class="montserrat weight-medium mb-5 capitalize"> <i class="zmdi zmdi-label-alt"></i> SHEBA: A Low-Cost Assistive Robot for Older Adults in the Developing World </h3>
+                            <p class="font-16 line-height-28">
+                                Motahar, T., Farden, M. F., <strong><u>Sarkar, D. P.</u></strong>, Islam, M. A., Cabrera, M. E., & Cakmak, M. (2019, October). 2019 28th IEEE International Conference on Robot and Human Interactive Communication (RO-MAN), India.
+                            </p>
+                          </li>
+                          <br>
+                            
+                          <li>
+                              <h3 class="montserrat weight-medium mb-5 capitalize"> <i class="zmdi zmdi-label-alt"></i> A Low-cost Healthcare Bot for Elderly People</h3>
                               <p class="font-16 line-height-28">
                                   <strong><u>Sarkar, D. P.</u></strong> , Farden, M. F., Islam, M. A., Rony, R. J., & Motahar, T. (2019, May). Joint 2019 8th International Conference on Informatics, Electronics & Vision (ICIEV) & 3rd International Conference on Imaging, Vision & Pattern Recognition (IVPR), USA.
                               </p>
@@ -200,7 +208,7 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="left floatleft">
-                <p>Copyright &copy; 2019 Dibya Prokash Sarkar.</p>
+                <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Dibya Prokash Sarkar. All Rights Reserved.</p>
               </div>
               <div class="right social-link floatright">
                 Made by Dibya Prokash Sarkar, on <a href="https://github.com/DibyaProkash/dibyaprokash.github.io" target="_blank" style="color: #393939"><i class="fa fa-github"></i></a> with <i class="fa fa-code"></i>
