--- a/contact.html
+++ b/contact.html
@@ -196,7 +196,7 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="left floatleft">
-                <p>Copyright &copy; 2019 Dibya Prokash Sarkar.</p>
+                <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Dibya Prokash Sarkar. All Rights Reserved.</p>
               </div>
               <div class="right social-link floatright">
                 Made by Dibya Prokash Sarkar, on <a href="https://github.com/DibyaProkash/dibyaprokash.github.io" target="_blank" style="color: #393939"><i class="fa fa-github"></i></a> with <i class="fa fa-code"></i>
